feat(api): add delete site route
