# apps/api-gateway/src/routes/site.routes.ts
@@ -6,4 +6,5 @@ const router = Router();
 router.post('/', SiteController.createSite);
 router.get('/', SiteController.getAll);
 router.get('/:id', SiteController.getById);
+router.delete('/:id', SiteController.deleteSite);
 export default router;
